feat: dynamic email
